--- a/Meteor.js Development/CourseWork/dev/image_share/image_share.css
+++ b/Meteor.js Development/CourseWork/dev/image_share/image_share.css
@@ -4,3 +4,11 @@
     min-height: 500px;
     max-height: 500px;
 }
+
+.thumbnail-img {
+    max-height: 300px;
+}
+
+body {
+    padding-top: 60px;
+}
